assets/queries/terraform/aws/ssh_port_open/test/negative.tf
resource "aws_security_group" "negative_ssh_1" {
  name        = "negative_ssh"
  description = "Doesn't get the ssh port open"
}

resource "aws_security_group" "negative_ssh_2" {

  ingress {
    from_port   = 24
    to_port     = 30
    protocol    = "tcp"
  }
}

resource "aws_security_group" "negative_ssh_3" {

  ingress {
    from_port   = 10
    to_port     = 30
    protocol    = "tcp"
    cidr_blocks = ["0.1.0.0/0"]
  }
}
